data fixed for decompose ballot test