@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.io.Reader;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.stream.Collectors;
 
 import org.mockito.invocation.InvocationOnMock;
 import org.mockito.stubbing.Answer;
@@ -23,7 +22,7 @@ public class ReaderAnswer<T> implements Answer<T> {
 		for (Entry<String, T> entry : mockingMap
 				.entrySet().stream().sorted((o1, o2) -> Integer
 						.valueOf(o1.getKey().length()).compareTo(o2.getKey().length()))
-				.collect(Collectors.toList())) {
+				.toList()) {
 			T value = mockValueFromStream(reader, entry.getKey(), entry.getValue());
 			if (null != value) {
 				return value;
